@@ -1758,7 +1758,8 @@ void is_square_free(IN SV* svn)
     is_perfect_power = 4
     is_lucky = 5
     is_practical = 6
-    is_totient = 7
+    is_perfect_number = 7
+    is_totient = 8
   PREINIT:
     int status, ret;
     UV n;
@@ -1780,7 +1781,8 @@ void is_square_free(IN SV* svn)
         case 4: ret = is_perfect_power(n); break;
         case 5: ret = is_lucky(n); break;
         case 6: ret = is_practical(n); break;
-        case 7:
+        case 7: ret = is_perfect_number(n); break;
+        case 8:
         default:ret = is_totient(n); break;
       }
     }
@@ -1793,7 +1795,8 @@ void is_square_free(IN SV* svn)
       case  4: _vcallsub_with_gmp(0.47,"is_perfect_power"); break;
       case  5: _vcallsub_with_gmp(0.48,"is_lucky"); break;
       case  6: _vcallsub_with_gmp(0.53,"is_practical"); break;
-      case  7:
+      case  7: _vcallsub_with_gmp(0.53,"is_perfect_number"); break;
+      case  8:
       default: _vcallsub_with_gmp(0.47,"is_totient"); break;
     }
     return; /* skip implicit PUTBACK */
