@@ -30,7 +30,7 @@ our @EXPORT_OK =
       is_odd is_even is_divisible is_congruent
       is_power is_prime_power is_perfect_power is_square
       is_square_free is_powerfree
-      is_pillai is_polygonal is_congruent_number
+      is_pillai is_polygonal is_congruent_number is_perfect_number
       is_semiprime is_almost_prime is_omega_prime
       is_primitive_root is_carmichael is_quasi_carmichael
       is_fundamental is_totient is_gaussian_prime is_sum_of_squares
@@ -3048,6 +3048,11 @@ modulo C<d>, and 0 otherwise.
 This corresponds to the GMP function C<mpz_congruent_p>.
 This includes its semantics with C<d=0> which returns 0 unless C<n=c>.
 
+=head2 is_perfect_number
+
+Given integer C<n>, returns 1 if C<n> is a positive integer that is the
+sum of its divisors excluding the number itself, or equivalently a number
+that is equal to its aliquot sum.
 
 =head2 is_power
 
