@@ -74,6 +74,7 @@ extern int is_primitive_root(UV a, UV n, int nprime);
 extern UV  factorialmod(UV n, UV m);
 extern int binomialmod(UV *res, UV n, UV k, UV m);
 extern int is_square_free(UV n);
+extern int is_perfect_number(UV n);
 extern int is_fundamental(UV n, int neg);
 extern int is_semiprime(UV n);
 extern int is_almost_prime(UV k, UV n);
